--- a/style.css
+++ b/style.css
@@ -538,7 +538,7 @@ padding-left: 15px;
 display: inline-block;
 }
 .cta-text h4 {
-color: #212020;
+color: #ffffff;
 font-size: 20px;
 font-weight: 600;
 margin-bottom: 2px;
@@ -751,7 +751,7 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
 }
 article {
   --img-scale: 1.001;
-  --title-color: black;
+  --title-color: rgb(188, 188, 188);
   --link-icon-translate: -20px;
   --link-icon-opacity: 0;
   position: relative;
