--- a/leaderboard.css
+++ b/leaderboard.css
@@ -56,13 +56,17 @@
     margin-top: 10vh;
 }
 
+
 .card:hover{
   transform: scale(1.025);
   transition: .1s ease-in-out;
-  background-color: rgb(128, 118, 112);
+  background-color: blue(128, 118, 112);
   box-shadow: grey  5px 2px 6px;
   background-image: linear-gradient(rgb(154, 194, 218),rgb(156, 156, 236) );
+  
 }
+
+
 
 .theme-img{
     width: 20em;
@@ -192,11 +196,11 @@ header a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
+  display: block; 
 }
 
 .dropdown-content a:hover {
-  background-color: #3fa9ff;
+  background-color: #3fa9ff; 
 }
 
 .dropdown:hover .dropdown-content {
@@ -331,10 +335,10 @@ header .container .col-md-7 p {
 }
 
 .card {
-  background-color: #007bff;;
-  background-image: linear-gradient(rgb(120, 155, 233),rgb(119, 159, 247));
+  background-color: #ffffff;;
+  background-image: linear-gradient(rgb(182, 200, 240),rgb(215, 222, 236));
   height: 20rem;
-  border-radius: 5px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -561,7 +565,8 @@ header .container .col-md-7 p {
     .description{
         display: block;
         transform: translateY(0);
-        margin-top: 30vh;
+        margin-top: 10vh;
+        margin-left: 10vh;
     }
     table{
         max-width:50vh;
@@ -593,13 +598,9 @@ header .container .col-md-7 p {
     .card{
        /*margin-top: 10vh; */
       padding: 3% 3% ;
+      margin-top: 10vh;
     }
 }
-
-
-
-
-
 
 
 
