--- a/style.css
+++ b/style.css
@@ -276,21 +276,21 @@ header .container .col-md-7 p {
 .cover {
   width: 100%;
   height: 55vmin;
-  background-image: url("img/feature/3.jpg");
+  /* background-image: url("img/feature/3.jpg"); */
   background-color: grey;
   background-position: -24rem -19rem;
   background-size: 150%;
   position: relative;
 }
 
-.cover .overlay {
+/* .cover .overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 999;
-}
+} */
 
 .cover .content {
   width: 100%;
@@ -327,7 +327,7 @@ header .container .col-md-7 p {
   box-shadow: 1px 2px 50px 0px rgba(0, 191, 255, 0.484);
 } */
 
-.numbers {
+/* .numbers {
   margin-top: -15vmin;
 }
 
@@ -338,7 +338,7 @@ header .container .col-md-7 p {
 
 .numbers .rect > p {
   font-family: var(--Patua);
-}
+} */
 
 .purchase > h1 {
   padding-top: 15vmin;
@@ -352,7 +352,7 @@ header .container .col-md-7 p {
   padding-bottom: 10vmin;
 }
 
-.purchase .cards .card {
+/* .purchase .cards .card {
   width: 22rem;
   margin: 3vmin 3vmin;
 }
@@ -385,7 +385,7 @@ header .container .col-md-7 p {
 .card-body .pricing > h1 {
   font-size: 4vmin;
   padding: 1em 0.5em;
-}
+} */
 
 /* Section 3 */
 
@@ -680,7 +680,7 @@ color: #29e0da;
 font-size: 14px;
 color: #878787;
 }
-.btn-3 {
+/* .btn-3 {
   background: rgb(0,172,238);
 background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   width: 130px;
@@ -748,7 +748,7 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
 }
 .btn-3 span:hover:after {
   width: 100%;
-}
+} */
 article {
   --img-scale: 1.001;
   --title-color: rgb(188, 188, 188);
