--- a/style.css
+++ b/style.css
@@ -876,7 +876,10 @@ Generic layout (demo looks)
       object-fit: cover;
   }
 }
-
+i{
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+}
 .sr-only:not(:focus):not(:active) {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
