--- a/style.css
+++ b/style.css
@@ -275,12 +275,12 @@ header .container .col-md-7 p {
 
 .cover {
   width: 100%;
-  height: 55vmin;
+  height: 140px;
   /* background-image: url("img/feature/3.jpg"); */
-  background-color: grey;
+  /* background-color: grey;
   background-position: -24rem -19rem;
   background-size: 150%;
-  position: relative;
+  position: relative; */
 }
 
 /* .cover .overlay {
@@ -294,9 +294,9 @@ header .container .col-md-7 p {
 
 .cover .content {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   background-color: white;
-  padding-top: 19vmin;
+  /* padding-top: 19vmin; */
 }
 
 .cover .content > h1 {
@@ -570,8 +570,9 @@ margin-bottom: 30px;
 .footer-text p {
 margin-bottom: 14px;
 font-size: 14px;
-    color: #ffffff;
+color: #ffffff;
 line-height: 28px;
+text-align: justify;
 }
 .footer-social-icon span {
 color: #fff;
@@ -675,6 +676,7 @@ padding: 25px 0;
 margin-top: 4%;
 font-size: 14px;
 color: white;
+text-align: left;
 }
 .copyright-text p a{
 color: #24bbda;
