--- a/eventstyle.css
+++ b/eventstyle.css
@@ -1,55 +1,18 @@
-
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #808080;
-  min-width: 160px;
-  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: rgba(255, 255, 255, 85%);
-  z-index: 9999;
-  transition: all 1.5s ease;
-}
-
 body {
-  font-family: Montserrat;
-  /* margin-bottom: 4%; */
+  font-family: 'Montserrat',  'sans-serif';
 }
 
-.text-light {
-  color: #ffffff !important;
-}
+
 
 /* .card-text{
   text-align: justify;
   padding: 0% 0%;
 } */
 
-.card-container{
-  padding-top: 80px;
-}
+ .card-container{
+  margin-top: 60px;
+  margin-bottom: 60px;
+} 
 
 /* @media (min-width: 576px) and (max-width: 767.98px) {
   .card-deck .card {
@@ -80,16 +43,7 @@ body {
 *,*::before,*::after{
     box-sizing: border-box;
 } */
-body{
 
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.4;
-    /* line-height: 15px; */
-    /* width: 7px; */
-    color: black;
-    margin: 0;
-}
 /* body::before{
     content: '';
     position: fixed;
@@ -104,78 +58,58 @@ body{
     background-repeat: no-repeat;
     background-position: center;
 } */
-#title{
+/* #title{
     color: rgb(0, 49, 173);
     font-weight: 600;
     
     
-}
-h1{
+} */
+/* h1{
     font-weight: 400;
     line-height: 1.2;
-}
-p{
+} */
+/* p{
     font-size: 1.125rem;
 }
 h1,p{
     margin-top: 0;
     margin-bottom: 0.5rem;
-}
-label{
+} */
+/* label{
     display: flex;
     align-items: center;
     font-size: 1.125rem;
     margin-bottom: 0.5rem;
-}
+} */
 
-input,button,select,textarea{
+/* input,button,select,textarea{
     margin: 0;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-}
-.container{
+} */
+/* .container{
     width: 100%;
     margin: 3.125rem auto 0 auto;
     padding:1.8rem 1rem;
-}
-
-/* .header{
-    padding: 0 0.625rem;
-    margin-bottom: 1.875rem;
-    text-align: center;
 } */
-#description{
-    font-style: Montserrat;
-    font-weight: 200;
-    /* text-shadow: 1px 1px 1px rgb(0, 0, 0); */
-    color: black;
 
-}
-.clue{
-    margin-left: 0.25rem;
-    font-size: 0.9rem;
-    color: #e4e4e4;
-}
-#quest{
-    color: rgb(0, 0, 0);
-    font-size: 1.5rem;
-}
-form{
+
+/* form{
     background: var(--color-darkblue-alpha);
     border-radius: 0.25rem;
-}
+} */
 
 /* @media (min-width: 480px){
     form{
         padding: 2.5rem;
     }
 } */
-.form-group{
+/* .form-group{
     margin: 0 auto 1.25rem auto;
     padding: 0.25rem;
-}
-.formControl{
+} */
+/* .formControl{
     display: block;
     width: 100%;
     height: 2.375rem;
@@ -186,8 +120,8 @@ form{
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
-}
-.formControl:focus{
+} */
+/* .formControl:focus{
     border-color:blue;
     outline: 0;
     box-shadow:0 0 0 0.2rem rgba(0,123,255,0.25)
@@ -200,12 +134,12 @@ form{
     min-height: 1.25rem;
     min-width: 1.25rem;
 
-}
-.textarea{
+} */
+/* .textarea{
     width: 100%;
     padding: 0.75rem;
     font-size: 1.15rem;
     outline: none;
     border-color: blue;
     border-radius: 5px;
-}
+} */
