--- a/contact.css
+++ b/contact.css
@@ -1,18 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
-}
-/* body{
-  min-height: 100vh;
-  width: 100%;
-  background: #c8e8e9;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
 .contact-main{
   min-height: 114vh;
   width: 100%;
@@ -21,6 +6,7 @@
   align-items: center;
   justify-content: center;
 }
+
 i{
   cursor: pointer;
 }
@@ -72,7 +58,7 @@ i{
 .contentofcontainer .left-side .details .text-one,
 .contentofcontainer .left-side .details .text-two{
   font-size: 14px;
-  color: #afafb6;
+  color: black;
 }
 .containerofcontact .contentofcontainer .right-side{
   width: 75%;
@@ -158,4 +144,5 @@ i{
    margin-left: 0;
  }
 }
+
 
