--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ font-weight: 600;
 margin-bottom: 2px;
 }
 .cta-text span {
-color: #757575;
+color: #332f2f;
 font-size: 15px;
 }
 .footer-content {
