--- a/style.css
+++ b/style.css
@@ -669,6 +669,14 @@ text-align: left;
 .copyright-text p a{
 color: #24bbda;
 }
+
+.footer-menu {
+margin-top: 4%;
+font-size: 14px;
+color: white;
+text-align: right;
+}
+
 .footer-menu li {
 display: inline-block;
 margin-left: 20px;
