--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,11 @@ header img {
   margin-top: 2px;
   margin-left: 0%;
 } */
-/* .navbar-collapse
-{
-  padding: 0% 0%;
-  
+
+/* .navbar-collapse{
+  height: auto;
+  position: relative;
+  z-index: 1;
 } */
 
 .my-button{
