--- a/MyProfile.css
+++ b/MyProfile.css
@@ -1,35 +1,42 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap'); */
 
-*{
+/* *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   list-style: none;
   font-family: 'Josefin Sans', sans-serif;
-}
+} */
 
 body{
-   background-color: #f3f3f3;
+   background-color: #000000;
 }
 
 .wrapper{
+    font-family: 'Montserrat',  'sans-serif';
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  width: 450px;
+  width: 95%;
+  height: 90%;
   display: flex;
   box-shadow: 0 1px 20px 0 rgba(69,90,100,.08);
 }
-
+.right a img{
+    width: 20px;
+    height: 20px;
+    margin-left: 98%;
+    margin-top: -1%;
+}
 .wrapper .left{
-  width: 35%;
-  background: linear-gradient(to right,#01a9ac,#01dbdf);
+  width: 25%;
+  background-color: #bde9f6;
   padding: 30px 25px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   text-align: center;
-  color: #fff;
+  color: #000000;
 }
 
 .wrapper .left img{
@@ -46,7 +53,7 @@ body{
 }
 
 .wrapper .right{
-  width: 65%;
+  width: 75%;
   background: #fff;
   padding: 30px 25px;
   border-top-right-radius: 5px;
@@ -91,23 +98,15 @@ body{
   margin-bottom: 10px;
   color: #919aa3;
 }
-
-.wrapper .social_media ul{
-  display: flex;
+.Logout{
+    background-color: #007bff;
+    color: rgb(255, 255, 255);
+    border: 0px;
+    border-radius: 2px 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
-
-.wrapper .social_media ul li{
-  width: 45px;
-  height: 45px;
-  background: linear-gradient(to right,#01a9ac,#01dbdf);
-  margin-right: 10px;
-  border-radius: 5px;
-  text-align: center;
-  line-height: 45px;
-}
-
-.wrapper .social_media ul li a{
-  color :#fff;
-  display: block;
-  font-size: 18px;
+.myprofileoption a{
+    color: #0069e1;
+    text-decoration: none;
 }
