--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
 /* margin: 0;
 padding: 0;
@@ -319,7 +318,7 @@ header .container .col-md-7 p {
   width: 17rem;
   height: 17rem;
   padding-top: 3.5vmin;
-  margin: 1rem;
+  margin: 1rem
   border-radius: 0.5em;
   box-shadow: 1px 2px 50px 0px rgba(0, 191, 255, 0.484);
 } */
